@@ -21,10 +21,12 @@ package org.netbeans.modules.java;
 
 import com.sun.source.tree.ClassTree;
 import com.sun.source.tree.CompilationUnitTree;
+import java.awt.Component;
 import org.netbeans.api.java.source.support.ErrorAwareTreeScanner;
 import java.awt.Image;
-import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
+import java.beans.PropertyEditor;
+import java.beans.PropertyEditorSupport;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
@@ -32,27 +34,34 @@ import java.io.InputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URL;
+import java.nio.ByteBuffer;
 import java.text.MessageFormat;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Comparator;
+import java.util.HexFormat;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Stream;
 import javax.lang.model.element.Modifier;
+import javax.swing.DefaultComboBoxModel;
+import javax.swing.JComboBox;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import org.netbeans.api.annotations.common.CheckForNull;
 import org.netbeans.api.annotations.common.NonNull;
 import org.netbeans.api.annotations.common.NullAllowed;
 import org.netbeans.api.java.classpath.ClassPath;
+import org.netbeans.api.java.platform.JavaPlatformManager;
 import org.netbeans.api.java.source.CompilationController;
 import org.netbeans.api.java.source.JavaSource;
-import org.netbeans.api.java.source.ModificationResult;
-import org.netbeans.api.java.source.Task;
 import org.netbeans.api.project.FileOwnerQuery;
 import org.netbeans.api.project.Project;
 import org.netbeans.api.queries.FileBuiltQuery;
@@ -61,34 +70,26 @@ import org.netbeans.modules.classfile.Access;
 import org.netbeans.modules.classfile.ClassFile;
 import org.netbeans.modules.classfile.InvalidClassFormatException;
 import org.netbeans.modules.java.source.usages.ExecutableFilesIndex;
-import org.netbeans.modules.parsing.api.ParserManager;
-import org.netbeans.modules.parsing.api.ResultIterator;
-import org.netbeans.modules.parsing.api.Source;
-import org.netbeans.modules.parsing.api.UserTask;
-import org.netbeans.modules.parsing.spi.ParseException;
-import org.netbeans.modules.parsing.spi.Parser;
 import org.netbeans.spi.java.loaders.RenameHandler;
 import org.openide.filesystems.*;
 import org.openide.loaders.DataNode;
 import org.openide.loaders.DataObject;
+import org.openide.modules.SpecificationVersion;
 import org.openide.nodes.Children;
 import org.openide.nodes.Node;
 import org.openide.nodes.PropertySupport;
 import org.openide.nodes.Sheet;
 import org.openide.util.Exceptions;
 import org.openide.util.ImageUtilities;
-
-import static org.openide.util.ImageUtilities.assignToolTipToImage;
-import static org.openide.util.ImageUtilities.loadImage;
-
 import org.openide.util.Lookup;
-
-import static org.openide.util.NbBundle.getMessage;
 import org.openide.util.NbPreferences;
-
 import org.openide.util.RequestProcessor;
 import org.openide.util.Utilities;
 import org.openide.util.WeakListeners;
+
+import static org.openide.util.ImageUtilities.assignToolTipToImage;
+import static org.openide.util.ImageUtilities.loadImage;
+import static org.openide.util.NbBundle.getMessage;
 
 /**
  * The node representation of Java source files.
@@ -107,8 +108,12 @@ public final class JavaNode extends DataNode implements ChangeListener {
     private static final String ANNOTATION_ICON_BASE = "org/netbeans/modules/java/resources/annotation_file.png";   //NOI18N
     private static final String EXECUTABLE_BADGE_URL = "org/netbeans/modules/java/resources/executable-badge.png";  //NOI18N
     private static final String NEEDS_COMPILE_BADGE_URL = "org/netbeans/modules/java/resources/needs-compile.png";  //NOI18N
+    // synced with org.netbeans.modules.java.file.launcher.SingleSourceFileUtil
+    private static final String GLOBAL_VM_OPTIONS = "java_file_launcher_global_vm_options"; //NOI18N
     private static final String FILE_ARGUMENTS = "single_file_run_arguments"; //NOI18N
+    private static final String FILE_JDK = "single_file_run_jdk"; //NOI18N
     private static final String FILE_VM_OPTIONS = "single_file_vm_options"; //NOI18N
+    private static final String FILE_REGISTER_ROOT = "register_root"; //NOI18N
 
     private static final Map<String,Image> IMAGE_CACHE = new ConcurrentHashMap<>();
     private static final boolean ALWAYS_PREFFER_COMPUTED_ICON = Boolean.getBoolean("JavaNode.prefferComputedIcon"); //NOI18N
@@ -139,22 +144,18 @@ public final class JavaNode extends DataNode implements ChangeListener {
             if (isJavaSource) {
                 WORKER.post(new BuildStatusTask(this));
                 WORKER.post(new ExecutableTask(this));
-                jdo.addPropertyChangeListener(new PropertyChangeListener() {
-                    public void propertyChange(PropertyChangeEvent evt) {
-                        if (DataObject.PROP_PRIMARY_FILE.equals(evt.getPropertyName())) {
-                            Logger.getLogger("TIMER").log(Level.FINE, "JavaNode", new Object[]{jdo.getPrimaryFile(), this});
-                            WORKER.post(new Runnable() {
-                                public void run() {
-                                    computedIconListener.set(null);
-                                    synchronized (JavaNode.this) {
-                                        status = null;
-                                        executableListener = null;
-                                        WORKER.post(new BuildStatusTask(JavaNode.this));
-                                        WORKER.post(new ExecutableTask(JavaNode.this));
-                                    }
-                                }
-                            });
-                        }
+                jdo.addPropertyChangeListener((evt) -> {
+                    if (DataObject.PROP_PRIMARY_FILE.equals(evt.getPropertyName())) {
+                        Logger.getLogger("TIMER").log(Level.FINE, "JavaNode", new Object[]{jdo.getPrimaryFile(), this});
+                        WORKER.post(() -> {
+                            computedIconListener.set(null);
+                            synchronized (JavaNode.this) {
+                                status = null;
+                                executableListener = null;
+                                WORKER.post(new BuildStatusTask(JavaNode.this));
+                                WORKER.post(new ExecutableTask(JavaNode.this));
+                            }
+                        });
                     }
                 });
             }
@@ -177,7 +178,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
     
     private static synchronized RenameHandler getRenameHandler() {
         Collection<? extends RenameHandler> handlers = (Lookup.getDefault().lookupAll(RenameHandler.class)) ;
-        if (handlers.size()==0)
+        if (handlers.isEmpty())
             return null;
         if (handlers.size()>1)
             LOG.warning("Multiple instances of RenameHandler found in Lookup; only using first one: " + handlers); //NOI18N
@@ -213,7 +214,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
         ps.setDisplayName(getMessage(JavaNode.class, "LBL_JavaNode_sheet_classpaths"));
         ps.setShortDescription(getMessage(JavaNode.class, "HINT_JavaNode_sheet_classpaths"));
         ps.put(new Node.Property[] {
-            new ClasspathProperty(ClassPath.COMPILE,
+                    new ClasspathProperty(ClassPath.COMPILE,
                     getMessage(JavaNode.class, "PROP_JavaNode_compile_classpath"),
                     getMessage(JavaNode.class, "HINT_JavaNode_compile_classpath")),
                     new ClasspathProperty(ClassPath.EXECUTE,
@@ -224,73 +225,34 @@ public final class JavaNode extends DataNode implements ChangeListener {
                     getMessage(JavaNode.class, "HINT_JavaNode_boot_classpath")),
         });
         sheet.put(ps);
-        
+
+        // classfile format etc
+        if (!isJavaSource) {
+            ps = new Sheet.Set();
+            ps.setName("classfile_info"); // NOI18N
+            ps.setDisplayName(getMessage(JavaNode.class, "LBL_JavaNode_sheet_classfile")); // NOI18N
+            ps.setShortDescription(getMessage(JavaNode.class, "HINT_JavaNode_sheet_classfile")); // NOI18N
+            ps.put(new ClassFileVersionProperty());
+            sheet.put(ps);
+        }
+
+        // "single-file" java programs
         Project parentProject = FileOwnerQuery.getOwner(super.getDataObject().getPrimaryFile());
         DataObject dObj = super.getDataObject();
         // If any of the parent folders is a project, user won't have the option to specify these attributes to the java files.
         if (parentProject == null) {
-            Node.Property arguments = new org.openide.nodes.PropertySupport.ReadWrite<String> (
-                    "runFileArguments", // NOI18N
-                    String.class,
-                    "Arguments",
-                    "Arguments passed to the main method while running the file."
-                ) {
-                    public String getValue () {
-                        Object arguments = dObj.getPrimaryFile().getAttribute(FILE_ARGUMENTS);
-                        return arguments != null ? (String) arguments : "";
-                    }
-
-                    public void setValue (String o) {
-                        try {
-                            dObj.getPrimaryFile().setAttribute(FILE_ARGUMENTS, o);
-                        } catch (IOException ex) {
-                            LOG.log(
-                                    Level.WARNING,
-                                    "Java File does not exist : {0}", //NOI18N
-                                    dObj.getPrimaryFile().getName());
-                        }
-                    }
-                };
-            Node.Property vmOptions = new org.openide.nodes.PropertySupport.ReadWrite<String> (
-                    "runFileVMOptions", // NOI18N
-                    String.class,
-                    "VM Options",
-                    "VM Options to be considered while running the file."
-                ) {
-                    public String getValue () {
-                        Object vmOptions = dObj.getPrimaryFile().getAttribute(FILE_VM_OPTIONS);
-                        return vmOptions != null ? (String) vmOptions : "";
-                    }
-
-                    public void setValue(String o) {
-                        try {
-                            dObj.getPrimaryFile().setAttribute(FILE_VM_OPTIONS, o);
-                            Source s = Source.create(dObj.getPrimaryFile());
-                            ModificationResult result = ModificationResult.runModificationTask(Collections.singleton(s), new UserTask() {
-
-                                @Override
-                                public void run(ResultIterator resultIterator) {
-                                }
-                            });
-                            result.commit();
-                        } catch (IOException | ParseException ex) {
-                            LOG.log(
-                                    Level.WARNING,
-                                    "Java File does not exist : {0}", //NOI18N
-                                    dObj.getPrimaryFile().getName());
-                        }
-                }
-                };
             Sheet.Set ss = new Sheet.Set();
             ss.setName("runFileArguments"); // NOI18N
-            ss.setDisplayName(getMessage(JavaNode.class, "LBL_JavaNode_without_project_run"));
+            ss.setDisplayName(getMessage(JavaNode.class, "LBL_JavaNode_without_project_run")); // NOI18N
             ss.setShortDescription("Run the file's source code.");
-            ss.put (arguments);
-            ss.put (vmOptions);
+            ss.put(new JavaFileBooleanAttributeProperty(dObj, FILE_REGISTER_ROOT, "registerRoot", "singlefile_registerRoot")); // NOI18N
+            ss.put(new RunFileJDKProperty(dObj));
+            ss.put(new JavaFileAttributeProperty(dObj, FILE_ARGUMENTS, "runFileArguments", "singlefile_arguments")); // NOI18N
+            ss.put(new JavaFileAttributeProperty(dObj, FILE_VM_OPTIONS, "runFileVMOptions", "singlefile_options")); // NOI18N
+            ss.put(new JavaFileGlobalOptionsProperty());
             sheet.put(ss);
         }
-        
-        
+
         @SuppressWarnings("LocalVariableHidesMemberVariable")
         PropertySet[] propertySets = sheet.toArray();
         
@@ -308,6 +270,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
                 getMessage (DataObject.class, "PROP_name"),
                 getMessage (DataObject.class, "HINT_name")
                 ) {
+            @Override
             public String getValue () {
                 return JavaNode.this.getName();
             }
@@ -319,6 +282,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
                     return super.getValue (key);
                 }
             }
+            @Override
             public void setValue(String val) throws IllegalAccessException,
                     IllegalArgumentException, InvocationTargetException {
                 if (!canWrite())
@@ -350,10 +314,11 @@ public final class JavaNode extends DataNode implements ChangeListener {
             setValue("oneline", false); // NOI18N
         }
         
+        @Override
         public String getValue() {
             ClassPath cp = ClassPath.getClassPath(getDataObject().getPrimaryFile(), id);
             if (cp != null) {
-                StringBuffer sb = new StringBuffer();
+                StringBuilder sb = new StringBuilder();
                 for (ClassPath.Entry entry : cp.entries()) {
                     URL u = entry.getURL();
                     String item = u.toExternalForm(); // fallback
@@ -378,10 +343,207 @@ public final class JavaNode extends DataNode implements ChangeListener {
         }
     }
 
+    /**
+     * Displays the class file version.
+     */
+    private final class ClassFileVersionProperty extends PropertySupport.ReadOnly<String> {
+
+        public static final Duration REFRESH = Duration.ofSeconds(5);
+        private Instant expiration = Instant.now();
+        private String version = null;
+
+        public ClassFileVersionProperty() {
+            super("classfile_version", String.class,  // NOI18N
+                getMessage(JavaNode.class, "PROP_JavaNode_classfile_version"), // NOI18N
+                getMessage(JavaNode.class, "HINT_JavaNode_classfile_version")); // NOI18N
+        }
+
+        @Override
+        public String getValue() {
+            FileObject file = getDataObject().getPrimaryFile();
+            // avoids IO but gets fresh values if they expire
+            if (version != null && Instant.now().isBefore(expiration)) {
+                return version;
+            }
+            try (InputStream in = file.getInputStream()) {
+                ByteBuffer bytes = ByteBuffer.wrap(in.readNBytes(8)); // 4b magic + 2x2b for version
+                if (bytes.capacity() == 8 && bytes.getInt() == HexFormat.fromHexDigits("CAFEBABE")) { // NOI18N
+                    int minor = bytes.getChar();
+                    int major = bytes.getChar();
+                    if (major >= 55) { // JEP 12
+                        version = major + " (Java " + (major - 44) + (minor == 65535 ? ", preview enabled" : "") + ")";  // NOI18N
+                    } else {
+                        version = major + "." + minor + " (Java " + (major - 44) + ")"; // NOI18N
+                    }
+                    expiration = Instant.now().plus(REFRESH);
+                    return version;
+                }
+            } catch (IOException ignored) {}
+            version = "unknown"; // NOI18N
+            return version;
+        }
+    }
+
+    private static final class RunFileJDKProperty extends PropertySupport.ReadWrite<String> {
+
+        private final PropertyEditorSupport jdkPicker = new JDKPicker();
+        private final DataObject dObj;
+
+        public RunFileJDKProperty(DataObject dObj) {
+            super("runFileJDK", String.class, // NOI18N
+                  getMessage(JavaNode.class, "PROP_JavaNode_singlefile_jdk"), // NOI18N
+                  getMessage(JavaNode.class, "HINT_JavaNode_singlefile_jdk")); // NOI18N
+            this.dObj = dObj;
+        }
+
+        @Override
+        public String getValue() {
+            return dObj.getPrimaryFile().getAttribute(FILE_JDK) instanceof String jdk ? jdk : "";
+        }
+
+        @Override
+        public void setValue(String text) {
+            try {
+                dObj.getPrimaryFile().setAttribute(FILE_JDK, text);
+            } catch (IOException ex) {
+                LOG.log(Level.WARNING, "Java File does not exist : {0}", dObj.getPrimaryFile().getName()); //NOI18N
+            }
+        }
+
+        @Override
+        public PropertyEditor getPropertyEditor() {
+            return jdkPicker;
+        }
+
+        // inline combobox for jdk property
+        private static final class JDKPicker extends PropertyEditorSupport {
+
+            private final JComboBox jdkCombo = new JComboBox();
+            private final PropertyChangeListener modelUpdater = e -> initModel();
+            private String[] jdks;
+
+            public JDKPicker() {
+                initModel();
+                jdkCombo.addActionListener(e -> super.setValue(jdkCombo.getSelectedItem()));
+                JavaPlatformManager jdkman = JavaPlatformManager.getDefault();
+                jdkman.addPropertyChangeListener(WeakListeners.propertyChange(modelUpdater, jdkman));
+            }
+
+            private void initModel() {
+                jdks = Stream.of(JavaPlatformManager.getDefault().getInstalledPlatforms())
+                             .filter(jdk -> isCompatible(jdk.getSpecification().getVersion()))
+                             .map(jdk -> jdk.getDisplayName())
+                             .sorted(Comparator.reverseOrder())
+                             .toArray(String[]::new);
+                jdkCombo.setModel(new DefaultComboBoxModel(jdks));
+            }
+
+            private static boolean isCompatible(SpecificationVersion jdkVerison) {
+                try {
+                    return Integer.parseInt(jdkVerison.toString()) >= 11;
+                } catch (NumberFormatException ignore) {}
+                return false;
+            }
+
+            @Override
+            public void setAsText(String text) throws IllegalArgumentException {
+                jdkCombo.setSelectedItem(text);
+            }
+
+            @Override
+            public void setValue(Object value) {
+                jdkCombo.setSelectedItem(value);
+                super.setValue(value);
+            }
+
+            @Override
+            @SuppressWarnings("ReturnOfCollectionOrArrayField")
+            public String[] getTags() {
+                return jdks;
+            }
+
+            @Override
+            public Component getCustomEditor() {
+                return jdkCombo;
+            }
+
+        }
+
+    }
+
+    // editable file attribute
+    private static final class JavaFileBooleanAttributeProperty extends PropertySupport.ReadWrite<Boolean> {
+
+        private final String attribute;
+        private final DataObject dObj;
+
+        public JavaFileBooleanAttributeProperty(DataObject dObj, String attribute, String name, String msgKeyPart) {
+            super(name, Boolean.class, getMessage(JavaNode.class, "PROP_JavaNode_" + msgKeyPart), getMessage(JavaNode.class, "HINT_JavaNode_" + msgKeyPart)); // NOI18N
+            this.dObj = dObj;
+            this.attribute = attribute;
+        }
+
+        @Override
+        public Boolean getValue() {
+            return dObj.getPrimaryFile().getAttribute(attribute) instanceof Boolean val ? val : false;
+        }
+
+        @Override
+        public void setValue(Boolean o) {
+            try {
+                dObj.getPrimaryFile().setAttribute(attribute, o);
+            } catch (IOException ex) {
+                LOG.log(Level.WARNING, "Java File does not exist : {0}", dObj.getPrimaryFile().getName()); //NOI18N
+            }
+        }
+    }
+
+    // editable file attribute
+    private static final class JavaFileAttributeProperty extends PropertySupport.ReadWrite<String> {
+
+        private final String attribute;
+        private final DataObject dObj;
+
+        public JavaFileAttributeProperty(DataObject dObj, String attribute, String name, String msgKeyPart) {
+            super(name, String.class, getMessage(JavaNode.class, "PROP_JavaNode_" + msgKeyPart), getMessage(JavaNode.class, "HINT_JavaNode_" + msgKeyPart)); // NOI18N
+            this.dObj = dObj;
+            this.attribute = attribute;
+        }
+
+        @Override
+        public String getValue() {
+            return dObj.getPrimaryFile().getAttribute(attribute) instanceof String val ? val : "";
+        }
+
+        @Override
+        public void setValue(String o) {
+            try {
+                dObj.getPrimaryFile().setAttribute(attribute, o);
+            } catch (IOException ex) {
+                LOG.log(Level.WARNING, "Java File does not exist : {0}", dObj.getPrimaryFile().getName()); //NOI18N
+            }
+        }
+    }
+
+    // read-only global VM options
+    private static final class JavaFileGlobalOptionsProperty extends PropertySupport.ReadOnly<String> {
+
+        public JavaFileGlobalOptionsProperty() {
+            super("runFileGlobalOptions", String.class, getMessage(JavaNode.class, "PROP_JavaNode_singlefile_global_options"), getMessage(JavaNode.class, "HINT_JavaNode_singlefile_global_options")); // NOI18N
+        }
+
+        @Override
+        public String getValue() {
+            return NbPreferences.forModule(JavaPlatformManager.class).get(GLOBAL_VM_OPTIONS, "").trim();
+        }
+    }
+
+    @Override
     public void stateChanged(ChangeEvent e) {
         WORKER.post(new BuildStatusTask(this));
     }
 
+    @Override
     public Image getIcon(int type) {
         Image i = prefferImage(
             computedIcon.get(),
@@ -390,6 +552,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
         return enhanceIcon(i);
     }
 
+    @Override
     public Image getOpenedIcon(int type) {
         Image i = super.getOpenedIcon(type);
         return enhanceIcon(i);
@@ -413,7 +576,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
             computed = FileUIUtils.getImageDecorator(fo.getFileSystem ()).annotateIcon (
                 computed,
                 type,
-                Collections.singleton(fo));
+                Set.of(fo));
         } catch (FileStateInvalidException e) {
             // no fs, do nothing
         }
@@ -515,34 +678,20 @@ public final class JavaNode extends DataNode implements ChangeListener {
                 final JavaSource src = JavaSource.forFileObject(file);
                 if (src != null) {
                     try {
-                        src.runUserActionTask(new Task<CompilationController>() {
-                            @Override
-                            public void run(CompilationController cc) throws Exception {
-                                cc.toPhase(JavaSource.Phase.PARSED);
-                                final CompilationUnitTree cu = cc.getCompilationUnit();
-                                final Collection<ClassTree> topTypes = cu.accept(
-                                    new ClasssFinder(),
-                                    new ArrayList<ClassTree>());
-                                for (ClassTree ct : topTypes) {
-                                    switch(ct.getKind()) {
-                                        case CLASS:
-                                            res[0] = ct.getModifiers().getFlags().contains(Modifier.ABSTRACT) ?
-                                             ABSTRACT_CLASS_ICON_BASE :
-                                             JAVA_ICON_BASE;
-                                            break;
-                                        case INTERFACE:
-                                            res[0] = INTERFACE_ICON_BASE;
-                                            break;
-                                        case ENUM:
-                                            res[0] = ENUM_ICON_BASE;
-                                            break;
-                                        case ANNOTATION_TYPE:
-                                            res[0] = ANNOTATION_ICON_BASE;
-                                            break;
-                                    }
-                                    if (file.getName().contentEquals(ct.getSimpleName())) {
-                                        break;
-                                    }
+                        src.runUserActionTask((CompilationController cc) -> {
+                            cc.toPhase(JavaSource.Phase.PARSED);
+                            final CompilationUnitTree cu = cc.getCompilationUnit();
+                            final Collection<ClassTree> topTypes = cu.accept(new ClasssFinder(), new ArrayList<>());
+                            for (ClassTree ct : topTypes) {
+                                switch(ct.getKind()) {
+                                    case CLASS -> res[0] = ct.getModifiers().getFlags().contains(Modifier.ABSTRACT)
+                                                                ? ABSTRACT_CLASS_ICON_BASE : JAVA_ICON_BASE;
+                                    case INTERFACE -> res[0] = INTERFACE_ICON_BASE;
+                                    case ENUM -> res[0] = ENUM_ICON_BASE;
+                                    case ANNOTATION_TYPE -> res[0] = ANNOTATION_ICON_BASE;
+                                }
+                                if (file.getName().contentEquals(ct.getSimpleName())) {
+                                    break;
                                 }
                             }
                         }, true);
@@ -623,8 +772,9 @@ public final class JavaNode extends DataNode implements ChangeListener {
             this.node = node;
         }
 
+        @Override
         public void run() {
-            Status _status = null;
+            Status _status;
             synchronized (node) {
                 _status = node.status;
             }            
@@ -663,6 +813,7 @@ public final class JavaNode extends DataNode implements ChangeListener {
             this.node = node;
         }
 
+        @Override
         public void run() {
             ChangeListener _executableListener;
             
@@ -673,10 +824,8 @@ public final class JavaNode extends DataNode implements ChangeListener {
             FileObject file = node.getDataObject().getPrimaryFile();
 
             if (_executableListener == null) {
-                _executableListener = new ChangeListener() {
-                    public void stateChanged(ChangeEvent e) {
-                        WORKER.post(new ExecutableTask(node));
-                    }
+                _executableListener = (ChangeEvent e) -> {
+                    WORKER.post(new ExecutableTask(node));
                 };
                 
                 ExecutableFilesIndex.DEFAULT.addChangeListener(file.toURL(), _executableListener);
