@@ -50,7 +50,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.BorderFactory;
 import javax.swing.Icon;
-import javax.swing.ImageIcon;
 import javax.swing.JCheckBox;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
@@ -66,7 +65,6 @@ import org.openide.awt.GraphicsUtils;
 import org.openide.awt.HtmlRenderer;
 import org.openide.nodes.Node.Property;
 import org.openide.util.ImageUtilities;
-import org.openide.util.Utilities;
 import org.openide.util.WeakListeners;
 
 /** 
@@ -283,7 +281,7 @@ final class RendererFactory {
 
                 if (c != null) {
                     try {
-                        result = (PropertyEditor) c.newInstance();
+                        result = (PropertyEditor) c.getDeclaredConstructor().newInstance();
 
                         //Check the values first
                         Object mdlValue = pm.getValue();
@@ -481,13 +479,12 @@ final class RendererFactory {
             f = new JLabel().getFont();
         }
 
-        StringBuffer buf = new StringBuffer(str.length() * 6); // x -> \u1234
-        char[] chars = str.toCharArray();
+        StringBuilder buf = new StringBuilder(str.length() * 6); // x -> \u1234
+        final int length = str.length();
+        for (int offset = 0; offset < length; ) {
+            final int cp = str.codePointAt(offset);
 
-        for (int i = 0; i < chars.length; i++) {
-            char c = chars[i];
-
-            switch (c) {
+            switch (cp) {
             // label doesn't interpret tab correctly
             case '\t':
                 buf.append("        "); // NOI18N
@@ -511,19 +508,22 @@ final class RendererFactory {
 
             default:
 
-                if ((null == f) || f.canDisplay(c)) {
-                    buf.append(c);
+                if ((null == f) || f.canDisplay(cp)) {
+                    buf.appendCodePoint(cp);
                 } else {
-                    buf.append("\\u"); // NOI18N
+                    for (char c : Character.toChars(cp)) {
+                        buf.append("\\u"); // NOI18N
 
-                    String hex = Integer.toHexString(c);
+                        String hex = Integer.toHexString(c);
 
-                    for (int j = 0; j < (4 - hex.length()); j++)
-                        buf.append('0');
+                        for (int j = 0; j < (4 - hex.length()); j++)
+                            buf.append('0');
 
-                    buf.append(hex);
+                        buf.append(hex);
+                    }
                 }
             }
+            offset += Character.charCount(cp);
         }
 
         return buf.toString();
@@ -680,10 +680,12 @@ final class RendererFactory {
 
         /** OptimizeIt shows about 12Ms overhead calling back to Component.enable(),
          * so overriding */
+        @Override
         public void setEnabled(boolean val) {
             enabled = val;
         }
 
+        @Override
         public void setText(String s) {
             if (s != null) {
                 if (s.length() > 512) {
@@ -699,35 +701,43 @@ final class RendererFactory {
 
         /** OptimizeIt shows about 12Ms overhead calling back to Component.enable(),
          * so overriding */
+        @Override
         public boolean isEnabled() {
             return enabled;
         }
 
         /** Overridden to do nothing */
+        @Override
         protected void firePropertyChange(String name, Object old, Object nue) {
             //do nothing
         }
 
+        @Override
         public void validate() {
             //do nothing
         }
 
+        @Override
         public void invalidate() {
             //do nothing
         }
 
+        @Override
         public void revalidate() {
             //do nothing
         }
 
+        @Override
         public void repaint() {
             //do nothing
         }
 
+        @Override
         public void repaint(long tm, int x, int y, int w, int h) {
             //do nothing
         }
 
+        @Override
         public Dimension getPreferredSize() {
             if (getText().length() > 1024) {
                 //IZ 44152, avoid excessive calculations when debugger
@@ -743,6 +753,7 @@ final class RendererFactory {
             return result;
         }
 
+        @Override
         public void paint(Graphics g) {
             if (editor != null) {
                 setEnabled(PropUtils.checkEnabled(this, editor, env));
@@ -959,7 +970,7 @@ final class RendererFactory {
             }
 
             if (i != null) {
-                setIcon(new ImageIcon(i));
+                setIcon(ImageUtilities.image2Icon(i));
             }
         }
 
@@ -1243,6 +1254,7 @@ final class RendererFactory {
             //do nothing
         }
 
+        @Override
         public Color getForeground() {
             return PropUtils.getErrorColor();
         }
