@@ -25,9 +25,6 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.PrintWriter;
 import java.io.Writer;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.security.CodeSource;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Pattern;
@@ -58,9 +55,7 @@ public class AnnotationProcessorTestUtils {
     public static void makeSource(File dir, String clazz, String... content) throws IOException {
         File f = new File(dir, clazz.replace('.', File.separatorChar) + ".java");
         f.getParentFile().mkdirs();
-        Writer w = new FileWriter(f);
-        try {
-            PrintWriter pw = new PrintWriter(w);
+        try (Writer w = new FileWriter(f); PrintWriter pw = new PrintWriter(w)) {
             String pkg = clazz.replaceFirst("\\.[^.]+$", "");
             if (!pkg.equals(clazz) && !clazz.endsWith(".package-info")) {
                 pw.println("package " + pkg + ";");
@@ -69,8 +64,6 @@ public class AnnotationProcessorTestUtils {
                 pw.println(line);
             }
             pw.flush();
-        } finally {
-            w.close();
         }
     }
 
@@ -101,7 +94,6 @@ public class AnnotationProcessorTestUtils {
      */
     public static boolean runJavac(File src, String srcIncludes, File dest, File[] cp, OutputStream stderr, String source) {
         List<String> args = new ArrayList<String>();
-        args.add("-classpath");
         StringBuilder b = new StringBuilder(dest.getAbsolutePath());
         if (cp != null) {
             for (File entry : cp) {
@@ -111,7 +103,11 @@ public class AnnotationProcessorTestUtils {
         } else {
             b.append(File.pathSeparatorChar).append(System.getProperty("java.class.path"));
         }
-        args.add(b.toString());
+        String classpath = b.toString();
+        args.add("-classpath");
+        args.add(classpath);
+        args.add("-processorpath");
+        args.add(classpath);
         args.add("-d");
         args.add(dest.getAbsolutePath());
         args.add("-sourcepath");
@@ -125,6 +121,7 @@ public class AnnotationProcessorTestUtils {
         } else {
             args.add(source);
         }
+        args.add("-proc:full"); // https://inside.java/2024/06/18/quality-heads-up/
         args.add("-Xlint:-options");
         dest.mkdirs();
         destG.mkdirs();
@@ -137,7 +134,7 @@ public class AnnotationProcessorTestUtils {
                 ),
             compiler);
         //System.err.println("running javac with args: " + args);
-        return compiler.run(null, null, stderr, args.toArray(new String[args.size()])) == 0;
+        return compiler.run(null, null, stderr, args.toArray(new String[0])) == 0;
     }
     private static void scan(List<String> names, File f, String includes) {
         if (f.isDirectory()) {
@@ -146,27 +143,6 @@ public class AnnotationProcessorTestUtils {
             }
         } else if (f.getName().endsWith(".java") && (includes == null || Pattern.compile(includes).matcher(f.getName()).find())) {
             names.add(f.getAbsolutePath());
-        }
-    }
-
-    /**
-     * Checks whether the version of javac in use suffers from #6929404.
-     * If so, calls to {@code LayerBuilder.validateResource(..., true)} will return normally
-     * even if the resource path does not exist, so tests must be more lenient.
-     */
-    public static boolean searchClasspathBroken() {
-        // Cannot just check for e.g. SourceVersion.RELEASE_7 because we might be running JDK 6 javac w/ JDK 7 boot CP, and that is in JRE.
-        // (Anyway libs.javacapi/external/nb-javac-api.jar, in the test's normal boot CP, has this!)
-        // Filter.class added in 7ae4016c5938, not long after f3323b1c65ee which we rely on for this to work.
-        // Also cannot just check Class.forName(...) since tools.jar not in CP but ToolProvider loads it specially - not true anymore since JDK 9 ToolProvider does not look for tools.jar.
-        final String res = "com/sun/tools/javac/util/Filter.class"; //NOI18N
-        final CodeSource codeSource = ToolProvider.getSystemJavaCompiler().getClass().getProtectionDomain().getCodeSource();
-        if (codeSource != null) {
-            //Compiler from URLClassLoader - JDK7, JDK8 javac
-            return new URLClassLoader(new URL[] {codeSource.getLocation()}).findResource(res) == null;
-        } else {
-            //Compiler from Boot, Ext, System ClassLoader - JDK9 javac
-            return ClassLoader.getSystemClassLoader().getResource(res) == null;
         }
     }
 
